// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.pagination Accepts pagination as true 1`] = `
<div
  class="ezd-table-wrapper"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <div
        class="ezd-table"
      >
        <div
          class="ezd-table-container"
        >
          <div
            class="ezd-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ezd-table-thead"
              >
                <tr>
                  <th
                    class="ezd-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ezd-table-tbody"
              >
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ezd-pagination ezd-table-pagination ezd-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ezd-pagination-prev ezd-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ezd-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ezd-pagination-item ezd-pagination-item-1 ezd-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ezd-pagination-next ezd-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ezd-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.pagination renders pagination correctly 1`] = `
<div
  class="ezd-table-wrapper"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <div
        class="ezd-table"
      >
        <div
          class="ezd-table-container"
        >
          <div
            class="ezd-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ezd-table-thead"
              >
                <tr>
                  <th
                    class="ezd-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ezd-table-tbody"
              >
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ezd-pagination ezd-table-pagination ezd-table-pagination-right my-page"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ezd-pagination-prev ezd-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ezd-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ezd-pagination-item ezd-pagination-item-1 ezd-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          class="ezd-pagination-item ezd-pagination-item-2"
          tabindex="0"
          title="2"
        >
          <a
            rel="nofollow"
          >
            2
          </a>
        </li>
        <li
          aria-disabled="false"
          class="ezd-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <button
            class="ezd-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.pagination renders pagination topLeft and bottomRight 1`] = `
<div
  class="ezd-table-wrapper"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <div
        class="ezd-table"
      >
        <div
          class="ezd-table-container"
        >
          <div
            class="ezd-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ezd-table-thead"
              >
                <tr>
                  <th
                    class="ezd-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ezd-table-tbody"
              >
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ezd-pagination ezd-table-pagination ezd-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ezd-pagination-prev ezd-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ezd-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ezd-pagination-item ezd-pagination-item-1 ezd-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ezd-pagination-next ezd-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ezd-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
